# Syncora

./: .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  README.md  README.pt-BR.md  eslint.config.js  index.html  package-lock.json  package.json  setup.html  vite.config.ts
backend/: requirements-build.txt  requirements.txt  server.py  syncora_backend.py
docs/privacy/: en.md  es.md  pt-BR.md
docs/terms/: en.md  es.md  pt-BR.md
scripts/: build-backend.ps1  build-inno-installer.ps1  generate-nsis-assets.mjs  install-context-menu.ps1  uninstall-context-menu.ps1
src/: App.css  App.tsx  i18n.ts  index.css  setup-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: syncora-inno.iss  syncora-installer.nsi
src-tauri/src/: lib.rs  setup_installer.rs
src/components/: SetupWizard.tsx
src/locales/: en.json  es.json  pt-BR.json
src/styles/: setup.css
