[package]
name = "syncora"
version = "0.1.0"
description = "Syncora desktop app"
authors = ["Syncora"]
license = "MIT"
repository = "https://github.com/CRaulD/Syncora"
edition = "2021"
rust-version = "1.77.2"
default-run = "syncora"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "syncora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
dirs = "5"
